--- a/src/css/index.css
+++ b/src/css/index.css
@@ -261,9 +261,6 @@ span.cursor.typing {
 
 
 @media only screen and (max-device-width: 575px) {
-    .darkmode-toggler {
-        right: 80px;
-    }
 
     .mobile-hidden {
         display: none;
